# Hlidskjalf-Engine

./: CMakeLists.txt  Hlidskjalf-Engine.sln  Hlidskjalf.sln  README.md
Hlidskjalf/: Hlidskjalf.vcxproj
Hlidskjalf-Engine/: Hlidskjalf-Engine.vcxproj  Hlidskjalf-Engine.vcxproj.filters  Hlidskjalf.cpp  Hlidskjalf.h  cpp.hint
Hlidskjalf-Engine/Source/: Core.h  Hlidskjalf.cpp  Hlidskjalf.h
HlidskjalfEngine/: CMakeLists.txt  HlidskjalfEngine.cpp  HlidskjalfEngine.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  Source.cpp
